<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:focusableInTouchMode="false"
    tools:context=".MainActivity">

    <!--Welcome Text-->
    <TextView
        android:id="@+id/welcome_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/arial_rounded"
        android:text="@string/welcome_text"
        android:textColor="#7DFFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--challenge Text-->
    <TextView
        android:id="@+id/Challenge_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/gill_sans_medium_bold"
        android:gravity="right"
        android:text="@string/let_s_do_the_challenge_text"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_textView"
        tools:ignore="RtlHardcoded" />

    <!--Identify the car make btn-->
    <Button
        android:id="@+id/identifyTheCarMake_btn"
        android:layout_width="284sp"
        android:layout_height="43sp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/home_btns"
        android:fontFamily="@font/gill_sans_bold"
        android:hapticFeedbackEnabled="false"
        android:onClick="identifyCarMakeBtn"
        android:text="@string/identify_the_car_make_btn"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hint_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <!--hint button-->
    <Button
        android:id="@+id/hint_btn"
        android:layout_width="284sp"
        android:layout_height="43sp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/home_btns"
        android:fontFamily="@font/gill_sans_bold"
        android:onClick="hintBtn"
        android:text="@string/hint_btn"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/identifyCarImage_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Identify the car image btn-->
    <Button
        android:id="@+id/identifyCarImage_btn"
        android:layout_width="284sp"
        android:layout_height="43sp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/home_btns"
        android:fontFamily="@font/gill_sans_bold"
        android:onClick="carImageBtn"
        android:text="@string/identify_the_car_image_btn"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/advanceLevel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Advance level btn-->
    <Button
        android:id="@+id/advanceLevel_btn"
        android:layout_width="284sp"
        android:layout_height="43sp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/home_btns"
        android:fontFamily="@font/gill_sans_bold"
        android:onClick="advanceBtn"
        android:text="@string/advance_level_btn"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>