<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Hint">

    <!--title-->
    <TextView
        android:id="@+id/hint_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gill_sans_heavy_bold"
        android:text="@string/hint_title_text"
        android:textColor="#C9FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--back btn-->
    <ImageButton
        android:id="@+id/hint_backBtn"
        android:layout_width="45dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="17dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back_button_content_text"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_btn"
        android:onClick="backHome"/>

    <!--car image-->
    <ImageView
        android:id="@+id/hint_imageView"
        android:layout_width="340sp"
        android:layout_height="200sp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/car_image_content_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_title" />

    <!--hint-->
    <TextView
        android:id="@+id/hint_carName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/gill_sans_bold"
        android:lineSpacingExtra="10sp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_imageView" />

    <!--Guess EditText-->
    <!--use imeOption to done the action and close the keyboard-->
    <EditText
        android:id="@+id/hint_guess_plainText"
        android:layout_width="146sp"
        android:layout_height="43sp"
        android:layout_marginTop="24dp"
        android:background="@drawable/guess_text_background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/guess_text"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="#7DFFFFFF"
        android:textSize="14sp"
        android:fontFamily="@font/gill_sans_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_carName_text"
        android:imeOptions="actionDone"/>


    <!--Next button-->
    <Button
        android:id="@+id/hint_next_btn"
        android:layout_width="146sp"
        android:layout_height="43sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_white_btn"
        android:text="@string/next_btn_text"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="15sp"
        android:fontFamily="@font/gill_sans_heavy_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_guess_plainText"
        android:onClick="nextBtn"/>

    <!--submit button-->
    <Button
        android:id="@+id/hint_submit_btn"
        android:layout_width="146sp"
        android:layout_height="43sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_blue_btn"
        android:text="@string/submit_btn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:fontFamily="@font/gill_sans_heavy_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_guess_plainText"
        android:onClick="submitBtn"/>

    <!-- Description text view-->
    <TextView
        android:id="@+id/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/hint_description_text"
        android:textAlignment="center"
        android:textColor="#C9FFFFFF"
        android:textSize="13sp"
        android:fontFamily="@font/gill_sans_heavy_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_submit_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>