<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyCarImage"
    android:background="@drawable/background">

    <!--title-->
    <TextView
        android:id="@+id/carImage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gill_sans_heavy_bold"
        android:text="@string/carImage_title_text"
        android:textColor="#C9FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--back btn-->
    <ImageButton
        android:id="@+id/hint_backBtn"
        android:layout_width="45dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="17dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back_button_content_text"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_btn"
        android:onClick="backHome"/>

    <!--First car image-->
    <ImageView
        android:id="@+id/carImage_imageView_1"
        android:layout_width="226dp"
        android:layout_height="130dp"
        android:layout_marginTop="62dp"
        android:background="@drawable/image_border"
        android:contentDescription="@string/car_image_content_text"
        android:onClick="clickImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImage_title" />

    <!--Second car image-->
    <ImageView
        android:id="@+id/carImage_imageView_2"
        android:layout_width="226dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/image_border"
        android:contentDescription="@string/car_image_content_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImage_imageView_1"
        android:onClick="clickImg"/>

    <!--Third car image-->
    <ImageView
        android:id="@+id/carImage_imageView_3"
        android:layout_width="226dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/image_border"
        android:contentDescription="@string/car_image_content_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImage_imageView_2"
        android:onClick="clickImg"/>

    <!--car name-->
    <TextView
        android:id="@+id/carImage_carName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="10sp"
        android:textColor="#C9FFFFFF"
        android:textSize="18sp"
        android:fontFamily="@font/gill_sans_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImage_imageView_3"
        android:textAllCaps="true"/>

    <!--next button-->
    <Button
        android:id="@+id/carImage_next_btn"
        android:layout_width="146sp"
        android:layout_height="43sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_white_btn"
        android:text="@string/next_btn_text"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="15sp"
        android:fontFamily="@font/gill_sans_heavy_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImage_carName_text"
        android:onClick="nextBtn"/>

    <!--submit button-->
    <Button
        android:id="@+id/carImage_submit_btn"
        android:layout_width="146sp"
        android:layout_height="43sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_blue_btn"
        android:text="@string/submit_btn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:fontFamily="@font/gill_sans_heavy_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImage_carName_text"
        android:onClick="submitBtn"/>

    <!-- Description text view-->
    <TextView
        android:id="@+id/carImage_text"
        android:layout_width="242sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/carImage_description_text"
        android:textAlignment="center"
        android:textColor="#C9FFFFFF"
        android:textSize="13sp"
        android:fontFamily="@font/gill_sans_heavy_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImage_submit_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>